Removing unused files and splitting webpack for Dev and Prod.

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>LumartCh.dev</title>
   </head>
-  <body>
+  <body style="margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
