Added favico to the project.

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       name="description"
     />
     <title>LumartCh.dev</title>
+    <link rel="icon" type="image/x-icon" href="/lumartch-dev.JPG">
   </head>
   <body style="margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
